# Colormeter

./: .gitignore  Ambient_blue_method_comparison.ipynb  Ambient_green_method_comparison.ipynb  Ambient_red_method_comparison.ipynb  Correction_models_HSV_space.ipynb  Correction_models_RGB_space.ipynb  Correction_models_combined(Developing).ipynb  Correction_models_combined_lighting.ipynb  Environment_correction.ipynb  README.md  analysis.ipynb  boot_coeffs_pose=True.npy  boot_table.tex  boot_table1.tex  bootstrap_ci.py  bootstrapped_coefficients_pose.npz  bootstrapped_coeffs_pose=False.npz.npy  check_coefs.ipynb  coeffs.npz  color_conversion.py  constants.py  correction.py  correction_by_scaling.ipynb  cross_validation(tmp).py  cross_validation.py  cv_k_out.csv  data.py  df_test.csv  error_ecdf_stats.csv  k_out_results.pkl  leave_one_out_results.pkl  loo_cv.csv  main.py  model_parameters_95CI.csv  notes.md  plot.py  plot_against_gt.py  plot_color_diff.py  plot_cv.py  plot_cv2.py  (+14 more)
Colorimeter/: Colorimeter.ipynb
Data/: Baisu1.json  Tai1.json  Tai3.json  Zhi1.json  ambient_blue.json  ambient_red.json  daylight1.json  daylight2.json  error_ecdf_stats.csv  loo_detailed_points.csv  stats_loo.csv  test_corrected_new.csv
Images/: model_parameters_95CI.csv
Legacy/: presentation.ipynb
New Pipeline/: Correction_models_LAB_space.ipynb  Correction_models_RGB_space.ipynb  New_correction_models_LAB.ipynb
New results/: loo_detailed_points.csv  model_parameters_95CI.csv
Old results/: df_corrected_rgb.csv  loo_detailed_points.csv  tmp_corrected_data.csv
Report/: boot_table.tex  (+3 more)
(+14 files in other folders)
