[project]
name = "colorimeter"
version = "0.1.0"
description = "Analysis of smartphone-based color measurement and correction."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "tueplots>=0.2.1",
]
